resources/full-install/istio-server/vsvc-argo-rollouts.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argo-rollouts
spec:
  hosts:
  - argo-rollouts.fredcorp.com
  gateways:
  - istio-system/tls-redirect
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 3100
        host: argo-rollouts-dashboard.argocd.svc.cluster.local
