resources/full-install/istio-server/vsvc-argocd.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd
spec:
  hosts:
  - argocd.fredcorp.com
  gateways:
  - istio-system/tls-redirect
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: argocd-server.argocd.svc.cluster.local
