resources/full-install/istio-server/vsvc-grafana.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana
spec:
  hosts:
  - grafana.fredcorp.com
  gateways:
  - istio-system/tls-redirect
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: prom-grafana.monitoring.svc.cluster.local
