resources/full-install/istio-server/vsvc-prometheus.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus
spec:
  hosts:
  - prometheus.fredcorp.com
  gateways:
  - istio-system/tls-redirect
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 9090
        host: prom-kube-prometheus-stack-prometheus.monitoring.svc.cluster.local
